Align vertically on mobile

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
             margin: auto;
         }
 
+        /* Mobile: stack pools vertically */
+        @media (max-width: 600px) {
+            .pools {
+                grid-template-columns: 1fr;
+            }
+        }
+
+
         .pool {
             background: #ffffff;
             padding: 15px;
