--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             list-style: none;
             padding: 0;
             margin: 0;
+            touch-action: pan-y;
+            overscroll-behavior-x: none;
+            overflow-x: hidden;
         }
 
         .team {
