--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         }
 
         .pool {
+            margin: 0 0 -10px;
             background: #ffffff;
             padding: 15px;
             border-radius: 10px;
@@ -156,7 +157,7 @@
         /* === Match Sections === */
         .firstplace, .thirdplace {
             max-width: 400px;
-            margin: 30px auto;
+            margin: 30px auto -10px;
             background: #fff;
             border-radius: 10px;
             padding: 15px;
